--- a/style.css
+++ b/style.css
@@ -1,20 +1,24 @@
 * {
     font-family: 'Merriweather', serif;
 }
+body {
+    background-color: #d4f0d2;
+}
 #navbar {
-    background-color: #40513B;
+    background-color: #2a581d;
     color:#EDF1D6;
 }
 
 #navbar-logo {
     width: 80px;
-}
-
-#navbar-logo:hover {
-    width:120px;
     transition:width 1s;
     transition-timing-function: ease-in-out;
 }
+
+ #navbar-logo:hover {
+    width:120px;
+} 
+
 
 .navbar-image {
     width: 100%;
@@ -47,7 +51,7 @@
     color:#EDF1D6;
 }
 .nav-dropdown {
-    background-color:#40513B ;
+    background-color:#2a581d ;
 }
 
 .dropdown-menu {
@@ -70,16 +74,196 @@
     font-weight: bolder;
 }
 
-@media (max-width: 768px) {
-    .navbar-nav {
-        font-size:25px;
+.carousel{
+    margin:0 1em;
+}
+
+.carouselContent {
+    width:100%;
+}
+
+.header__logo {
+    width:80%;
+}
+
+.carouselImage {
+    width:100%;
+}
+
+.carousel-item {
+    height:250px;
+}
+
+.carousel-caption {
+    width: 100px;
+    margin:0 auto;
+}
+
+.carousel-caption-img {
+    width: 100%;
+}
+
+.d-block {
+    width:100%;
+    height:100%;
+    border-radius: 10px;
+    box-shadow:12px 12px 10px 3px rgb(247, 244, 244);
+}
+
+#carouselContent__text {
+    font-size: 17px;
+    font-weight: 600;
+    color:#17594A;
+}
+
+#card__container,.complex__container {
+    margin:1em;
+}
+
+.card {
+    width:100%;
+    overflow: hidden;
+}
+
+.inner {
+    overflow: hidden;
+}
+
+#card__container__element {
+    box-shadow: -13px 13px 40px 20px rgb(0 0 0 / 0.2);
+}
+
+.card-img-top{
+    overflow: hidden;
+    transition:all 1.5s ease;
+}
+
+.card-img-top:hover {
+    transform: scale(1.5);
+}
+
+.card-img-bottom {
+    position:relative;
+    width:100px;
+    border-radius: 50%;
+    margin: 0 auto;
+    margin-top:-50px;
+    transition: border .5s;
+    transition-timing-function: linear;
+}
+
+
+#card__container__element:hover .card-img-bottom {
+    border: 5px solid green;
+    
+}
+
+.card__image1 {
+    width:100%;
+    overflow: hidden;
+}
+
+#card-buttons-location,#card-buttons-address {
+    transition:transform 0.7s ease-in-out,background-color 0.7s ease-in-out;
+}
+
+#card-buttons-location:hover {
+    background-color: rgb(248, 194, 194);
+    transform: scale(1.3);
+}
+
+#card-buttons-address:hover {
+    background-color: rgb(181, 236, 172);
+    transform: scale(1.3);
+}
+
+/* complex */
+.complex__container{
+    border-radius: 10px;
+}
+
+ #complex__container__slider {
+    margin:0;
+    width:100%;
+    height:200px;
+} 
+
+#complex__container__carousel-inner,.complex__container__carousel-item,.complex__container__carousel-image {
+    width:100%;
+    height:100%;
+}
+.complex__container__logo{
+    width:50px;
+}
+
+.complex__container__carousel-image {
+    transition: transform 1s ease;
+}
+
+.complex__container:hover .complex__container__carousel-image {
+    transform: scale(1.2);
+}
+
+.complex__container__logoimage {
+    visibility: hidden;
+    width:100%;
+    border-radius: 50%;
+    border: 2px solid green;
+    transition: visibility 1s ease,transform .5s ease;
+    opacity: 0.5;
+}
+
+.complex__container__carousel-item:hover .complex__container__logoimage {
+    visibility: visible;
+    transform: scale(1.2);
+}
+
+@media (min-width: 768px) {
+    #nav-items {
+        font-size:px;
         font-weight: 500;
+    }
+    .carousel-item {
+        height: 300px;
+    }
+    #carouselContent__text {
+        font-size: 30px;
+    }
+    #card-text2 {
+        margin-top: 2.4em;
+    }
+    #complex__container__slider{
+        height:400px;
     }
 }
 
-@media (max-width: 1024px) {
-    .navbar-nav {
-        font-size:35px;
+@media (min-width: 1024px) {
+    #nav-items {
+        font-size:25px;
+    }
+    .carousel-item {
+        height: 500px;
+    }
+    #carouselContent__text {
+        text-transform: capitalize;
+        text-align: center;
+        font-size: 40px;
+    }
+    #card__container {
+        max-width: 80%;
+        margin:3px auto ;
+    }
+    #complex__container__slider{
+        height:600px;
+    }
+    .complex__container__logo{
+        width:80px;
+    }
+}
+
+@media (min-width:1700px) {
+    #complex__container__slider{
+        height:500px;
     }
 }
 
