--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ body {
     overflow: hidden;
 }
 
-#card__container__element {
+#card__container__element1,#card__container__element2,#card__container__element3 {
     box-shadow: -13px 13px 40px 20px rgb(0 0 0 / 0.2);
 }
 
@@ -152,8 +152,7 @@ body {
     transition-timing-function: linear;
 }
 
-
-#card__container__element:hover .card-img-bottom {
+#card__container__element1:hover .card-img-bottom,#card__container__element2:hover .card-img-bottom,#card__container__element3:hover .card-img-bottom {
     border: 5px solid green;
     
 }
@@ -163,7 +162,7 @@ body {
     overflow: hidden;
 }
 
-#card-buttons-location,#card-buttons-address {
+#card-buttons-location,#card-buttons-address,#card-buttons-phone {
     transition:transform 0.7s ease-in-out,background-color 0.7s ease-in-out;
 }
 
@@ -177,6 +176,21 @@ body {
     transform: scale(1.3);
 }
 
+#card-buttons-phone:hover {
+    background-color: rgb(172, 173, 236);
+    transform: scale(1.3);
+}
+
+.address__text {
+    font-size: 1em;
+    font-weight: 700;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.card-title {
+    font-size: 1.5em;
+}
+
 /* complex */
 .complex__container{
     border-radius: 10px;
@@ -185,13 +199,18 @@ body {
  #complex__container__slider {
     margin:0;
     width:100%;
-    height:200px;
 } 
 
-#complex__container__carousel-inner,.complex__container__carousel-item,.complex__container__carousel-image {
+.inner1 {
+    overflow: hidden;
     width:100%;
     height:100%;
 }
+.complex__container__carousel-image {
+    width:100%;
+    height:100%;
+}
+
 .complex__container__logo{
     width:50px;
 }
@@ -218,6 +237,30 @@ body {
     transform: scale(1.2);
 }
 
+.footer {
+    width:100%;
+    height:200px;
+}
+
+.list-group {
+    overflow:hidden;
+}
+
+.list-group-item {
+    font-family: 'Cormorant Garamond', serif;
+    font-weight: 400;
+    font-size: 1.2em;
+}
+
+.list-group-item:hover {
+    transition:background-color 1s linear,transform 1s linear ;
+}
+
+.list-group-item:hover {
+    background-color: #9DC08B;
+    transform: scale(1.1);
+}
+
 @media (min-width: 768px) {
     #nav-items {
         font-size:px;
@@ -230,10 +273,13 @@ body {
         font-size: 30px;
     }
     #card-text2 {
-        margin-top: 2.4em;
+        margin-top: 2.8em;
     }
-    #complex__container__slider{
-        height:400px;
+    #card__buttons2 {
+        margin-top: 100px;
+    }
+    .card-title {
+        font-size: 2.5em;
     }
 }
 
@@ -253,17 +299,16 @@ body {
         max-width: 80%;
         margin:3px auto ;
     }
-    #complex__container__slider{
-        height:600px;
-    }
     .complex__container__logo{
-        width:80px;
+        width:100px;
+    }
+    .card-title {
+        margin-top: 0.8em;
+        font-size: 3em;
+    }
+    #complex__cardbody__elements {
+        margin-top: 3em;
     }
 }
 
-@media (min-width:1700px) {
-    #complex__container__slider{
-        height:500px;
-    }
-}
 
